Update PMD configuration and remove existing violations